--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1 maximum-scale=1.0, user-scalable=no"/>
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <meta charset="UTF-8" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -8,7 +9,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0" /> -->
     <title>Ntechzy</title>
   </head>
   <body>
@@ -17,10 +18,10 @@
     <script>
       AOS.init(
         {
-          offset: 12,
-          duration:900,
-          once:true,
-          easing:'ease-in',
+          duration: 800, // Duration of animations (in ms)
+      offset: 200, // Offset from the top of the viewport (in px) before triggering animations
+      easing: 'ease-in-out', // Easing style for animations
+      once: true // Whether animations should only happen once
         }
       );
     </script>
