--- a/index.html
+++ b/index.html
@@ -26,6 +26,14 @@
       );
     </script>
     <script type="module" src="/src/main.jsx"></script>
-    <script defer type="module" src="https://ntechzy.in/api/v1/student-form/form.js" path = "['/', '/about', '/dynamicForm/index.html']" divid="formsID7375" courses="['Select Course','BAMS', 'BHMS', 'BUMS', 'MBBS', 'BDS']" styles="basic" logo="" contact="+123-456-7890"></script>
+    <script defer type="module" src="https://ntechzy.in/api/v1/student-form/form.js" 
+        path='["/", "/about", "/dynamicForm/index.html"]' 
+        divid="formsID7375" 
+        courses='["Select Course","BAMS", "BHMS", "BUMS", "MBBS", "BDS"]' 
+        styles="basic" 
+        logo="" 
+        contact="+123-456-7890">
+</script>
+
   </body>
 </html>
