contactus and about

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       });
     </script>
     <script type="module" src="/src/main.jsx"></script>
-    <script
+    <!-- <script
       defer
       type="module"
       src="https://ntechzy.in/api/v1/student-form/form.js"
@@ -40,6 +40,6 @@
       styles="basic"
       logo=""
       contact="+123-456-7890"
-    ></script>
+    ></script> -->
   </body>
 </html>
